--- a/08_blocks/CSS/style.css
+++ b/08_blocks/CSS/style.css
@@ -3,7 +3,7 @@
 	height: 200px;
 	background-color: blue;
 	background-image: url(../img/image.jpg);
-	background-size: cover;
+	background-size: ;
 	background-repeat: no-repeat;
 	background-position: center;
 }
