--- a/40_form/CSS/style.css
+++ b/40_form/CSS/style.css
@@ -83,6 +83,7 @@ input {
 
 input:focus, textarea:focus, select:focus{
 	outline: none;
+	color: black;
 }
 
 input[type="radio"], input[type="checkbox"]
